[gd_scene load_steps=10 format=3 uid="uid://cj5sjrxje6ea"]

[ext_resource type="Script" uid="uid://blwuc0q5ksjvn" path="res://scripts/card_base.gd" id="1_vaipe"]
[ext_resource type="Texture2D" uid="uid://derv8smv52rsi" path="res://assets/textures/texture_card.png" id="2_nvit6"]
[ext_resource type="LabelSettings" uid="uid://c6a8lucxqlr1o" path="res://assets/labels/ls_card_stats.tres" id="3_l0by0"]
[ext_resource type="Texture2D" uid="uid://pplh2xfw6vyj" path="res://assets/textures/texture_animals.png" id="4_apeqe"]
[ext_resource type="Script" uid="uid://cd650rh5k7885" path="res://scripts/card_input_component.gd" id="5_ds24u"]
[ext_resource type="PackedScene" uid="uid://dxtlkutkybasp" path="res://objects/node_card_health_component.tscn" id="5_nvit6"]
[ext_resource type="PackedScene" uid="uid://d3ubjmfba2lhe" path="res://objects/node_card_attack_component.tscn" id="6_l0by0"]
[ext_resource type="Script" uid="uid://fil5s0axuw8o" path="res://scripts/clickbox_component.gd" id="6_ydlij"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oljun"]
size = Vector2(48, 64)

[node name="Card" type="Node2D" node_paths=PackedStringArray("card_input_component")]
z_index = 2
script = ExtResource("1_vaipe")
card_input_component = NodePath("CardInputComponent")

[node name="CardBackground" type="Sprite2D" parent="."]
texture = ExtResource("2_nvit6")
region_enabled = true
region_rect = Rect2(0, 0, 49, 64)

[node name="CardNameLabel" type="Label" parent="."]
offset_left = -22.0
offset_top = -29.0
offset_right = 227.0
offset_bottom = 19.0
scale = Vector2(0.175, 0.175)
text = "Горностай"
label_settings = ExtResource("3_l0by0")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="AnimalSprite" type="Sprite2D" parent="."]
position = Vector2(0, -4.5)
texture = ExtResource("4_apeqe")
region_enabled = true
region_rect = Rect2(1, 97, 43, 31)

[node name="CardHealthComponent" parent="." instance=ExtResource("5_nvit6")]
position = Vector2(-17, 19)
health = 6

[node name="CardAttackComponent" parent="." instance=ExtResource("6_l0by0")]
position = Vector2(17, 19)

[node name="CardInputComponent" type="Node2D" parent="." node_paths=PackedStringArray("clickbox_component")]
script = ExtResource("5_ds24u")
clickbox_component = NodePath("../ClickboxComponent")

[node name="ClickboxComponent" type="Area2D" parent="."]
priority = 2
script = ExtResource("6_ydlij")
metadata/_custom_type_script = "uid://fil5s0axuw8o"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickboxComponent"]
shape = SubResource("RectangleShape2D_oljun")

[connection signal="ready" from="." to="." method="_connect_to_signals"]
[connection signal="ready" from="." to="." method="_update_clickbox_component_handle_priority"]
[connection signal="mouse_entered" from="ClickboxComponent" to="CardInputComponent" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ClickboxComponent" to="CardInputComponent" method="_on_mouse_exited"]
[connection signal="mouse_left_button_clicked" from="ClickboxComponent" to="CardInputComponent" method="_on_mouse_left_button_clicked"]
[connection signal="mouse_right_button_clicked" from="ClickboxComponent" to="CardInputComponent" method="_on_mouse_right_button_clicked"]
